<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreferenceSettingsActivity"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/locationField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/preferenceSettingsLabel"/>

    <EditText
        android:id="@+id/preferenceNameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/preferenceSettingsSaveButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_background"
        android:text="@string/preferenceSettingsSaveButton"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/preferenceSettingsDeleteButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_background"
        android:text="@string/preferenceSettingsDeleteButton"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/preferenceSettingsClearButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button_background_grey"
        android:text="@string/preferenceSettingsClearButton"
        android:layout_marginTop="20dp"/>

</LinearLayout>