<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingConstraints"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:text="@string/registerFirstName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/registerFirstNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/registerLastName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/registerLastNameEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:text="@string/registerEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:inputType="text"/>
        <EditText
            android:id="@+id/registerEmailEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/registerPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/registerPasswordEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_marginTop="20dp"
            android:text="@string/registerConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/registerConfirmPasswordEditText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/registerConfirmButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerConfirmButton"
            android:background="@drawable/custom_button_background"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/registerClearButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerClearButton"
            android:background="@drawable/custom_button_background_grey"/>

    </LinearLayout>

</ScrollView>