<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/myInterestsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/myInterestsButton"
            android:background="@drawable/custom_button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/newRouteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newRouteButton"
            android:background="@drawable/custom_button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/helpButton"
            android:background="@drawable/custom_button_background"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>